--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^8.1.1",
     "redux-persist": "^6.0.0",
