--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
